# dockercook

./: .ghci  .gitignore  .travis.yml  LICENSE  README.md  bootstrap.sh  cookfile-mode.el  dockercook.cabal  run-example  stack.yaml
bootstrap/: bin-img.cook  cabal-pkg.cook  full-app.cook  ghc.cook  ubuntu.cook
example/docker/: master.docker  node.docker
example/repo/: dont-include.txt  hello.js
extensions/download/: with-md5.py
src/: Main.hs  Tests.hs
src/Cook/: ArgParse.hs  Build.hs  BuildFile.hs  Clean.hs  Types.hs  Util.hs
src/Cook/State/: Graph.hs  Manager.hs  Model.hs
src/Tests/: BuildFile.hs
src/lib/Cook/: Build.hs  BuildFile.hs  Clean.hs  DirectDocker.hs  Docker.hs  Downloads.hs  Extensions.hs  Sync.hs  Types.hs  Uploader.hs  Util.hs
src/lib/Cook/Core/: Compile.hs  FileHasher.hs  Parser.hs  Plugin.hs  Runner.hs  Types.hs
src/lib/Cook/Docker/: API.hs  Api.hs  CLI.hs  TLS.hs  Tls.hs  Types.hs
src/lib/Cook/Plugins/: Transaction.hs
src/lib/Cook/State/: Manager.hs  Model.hs
src/prog/: Main.hs
src/prog/Cook/: ArgParse.hs
src/test/: Tests.hs
src/test/Tests/: BuildFile.hs  DirectDocker.hs
src/test/Tests/Core/: TestParser.hs
src/test/Tests/Docker/: API.hs
test/: parsefail01.cook  parsefail02.cook
