name:                dockercook
version:             0.1.0.0
synopsis:            A build tool for multiple docker image layers
description:         Build and manage multiple docker image layers to speed up deployment
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          thiemann@factisresearch.com
copyright:           (c) 2014 factis research GmbH
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable dockercook
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.6.*,
                       attoparsec >=0.11 && <0.12,
                       base16-bytestring >=0.1 && <0.2,
                       bytestring >=0.10 && <0.11,
                       conduit >=1.0 && <1.1,
                       cryptohash >=0.11 && <0.12,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       filesystem-conduit >=1.0 && <1.1,
                       optparse-applicative >=0.8 && <0.9,
                       process >=1.1 && <1.2,
                       system-filepath >=0.4 && <0.5,
                       temporary >=1.2 && <1.3,
                       text >=1.1 && <1.2,
                       transformers >= 0.3 && <0.4,
                       graph-core >= 0.1 && <0.2,
                       persistent-sqlite >= 1.3 && <1.4,
                       persistent-template >=1.3 && <1.4,
                       resourcet >= 0.4 && <1.2,
                       mtl >=2.1 && <2.2,
                       monad-logger >=0.3 && <0.4,
                       cereal >=0.4 && <0.5,
                       safecopy >=0.8 && <0.9,
                       time >=1.4 && <1.5,
                       stm >=2.4 && <2.5,
                       hashable >=1.2 && <1.3,
                       vector >=0.10 && <0.11,
                       unordered-containers >=0.2 && <0.3
  hs-source-dirs:      src
  ghc-options: -Wall -fno-warn-orphans -fno-warn-missing-signatures

test-suite dockercook-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Tests.hs
  -- other-modules:       Tests.Routing
  build-depends:       HTF >=0.11 && <0.13,
                       base ==4.6.*,
                       attoparsec >=0.11 && <0.12,
                       base16-bytestring >=0.1 && <0.2,
                       bytestring >=0.10 && <0.11,
                       conduit >=1.0 && <1.1,
                       cryptohash >=0.11 && <0.12,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4,
                       filesystem-conduit >=1.0 && <1.1,
                       optparse-applicative >=0.8 && <0.9,
                       process >=1.1 && <1.2,
                       system-filepath >=0.4 && <0.5,
                       temporary >=1.2 && <1.3,
                       text >=1.1 && <1.2,
                       graph-core >= 0.1 && <0.2,
                       persistent-sqlite >= 1.3 && <1.4,
                       persistent-template >=1.3 && <1.4,
                       resourcet >= 0.4 && <1.2,
                       mtl >=2.1 && <2.2,
                       monad-logger >=0.3 && <0.4,
                       cereal >=0.4 && <0.5,
                       safecopy >=0.8 && <0.9,
                       time >=1.4 && <1.5,
                       stm >=2.4 && <2.5,
                       hashable >=1.2 && <1.3,
                       vector >=0.10 && <0.11,
                       unordered-containers >=0.2 && <0.3
  ghc-options: -Wall -fno-warn-orphans
